PP-10701: Delete unused endpoint and rename a class
* `/v1/event/{eventId}` is unused and so can be deleted
* `Event` is poorly named, and is only publicly exposed in the afore-mentioned deleted endpoint, so it has been renamed to `EventEntity`.
