# src/main/java/uk/gov/pay/ledger/event/resource/EventResource.java
@@ -12,7 +12,7 @@ import io.swagger.v3.oas.annotations.tags.Tag;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import uk.gov.pay.ledger.event.dao.EventDao;
-import uk.gov.pay.ledger.event.model.Event;
+import uk.gov.pay.ledger.event.model.EventEntity;
 import uk.gov.pay.ledger.event.model.EventTicker;
 import uk.gov.pay.ledger.exception.ErrorResponse;
 import uk.gov.pay.ledger.queue.EventMessage;
@@ -49,22 +49,6 @@ public class EventResource {
     public EventResource(EventDao eventDao, EventMessageHandler eventMessageHandler) {
         this.eventDao = eventDao;
         this.eventMessageHandler = eventMessageHandler;
-    }
-
-    @Path("/{eventId}")
-    @GET
-    @Timed
-    @Operation(
-            summary = "Find event by ID (id of event table)",
-            responses = {
-                    @ApiResponse(responseCode = "200", description = "OK", content = @Content(schema = @Schema(implementation = Event.class))),
-                    @ApiResponse(responseCode = "404", description = "Not found")
-            }
-    )
-    public Event getEvent(@PathParam("eventId") Long eventId) {
-        LOGGER.info("Get event request: {}", eventId);
-        return eventDao.getById(eventId)
-                .orElseThrow(() -> new WebApplicationException(Response.Status.NOT_FOUND));
     }
 
     @POST
